# flight

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: knowledge_base.md
docs/pm/: prd.md  roadmap.md
docs/tech/: apply_archives.md  architecture.md  build_run.md  flight_controls.md  forests.md  rendering.md  troubleshooting.md  world_generation.md
flight/: AGENTS.md  __init__.py  __main__.py  app.py  cli.py  config.py
flight/render/: camera.py  renderer.py  shaders.py  textures.py  trees.py
flight/util/: math.py
flight/world/: chunk.py  chunk_manager.py  height.py  lod_world.py  mesh_builder.py  noise.py  world.py
